crates/fundle_macros/src/snapshots/fundle_macros__bundle__tests__forward_empty.snap
---
source: crates/fundle_macros/src/bundle.rs
expression: expand_fundle_bundle!(item)
---
::core::compile_error! {
    "fundle::bundle #[forward(...)] attribute cannot be empty"
}
