crates/fundle_macros/src/snapshots/fundle_macros__bundle__tests__forward_invalid_syntax.snap
---
source: crates/fundle_macros/src/bundle.rs
expression: expand_fundle_bundle!(item)
---
::core::compile_error! {
    "fundle::bundle #[forward(...)] attribute must contain valid type paths: expected identifier"
}
